Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6207386/T6207386.out
T6207386.java:13:30: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X, T6207386.F<? super X>)
1 error
